# loopkit

./: .gitignore  CHANGELOG.md  LICENSE  MILESTONE-CONTRACT.md  README.md  pyproject.toml
.claude/data/sessions/: da0d9633-7f7b-4ebc-80f9-81a9c987a7df.json
.github/workflows/: ci.yml
logs/: chat.json  stop.json  subagent_stop.json  user_prompt_submit.json
src/loopkit/: __init__.py  beliefs.py  circuit_breaker.py  cli.py  cusum.py  degradation.py  ensemble.py  ncd.py  orchestrator.py  skill_dag.py  store.py
tests/: test_beliefs.py  test_circuit_breaker.py  test_cli.py  test_cusum.py  test_degradation.py  test_ensemble.py  test_ncd.py  test_orchestrator.py  test_skill_dag.py  test_store.py
