[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopkit"
version = "0.1.0"
description = "Probabilistic orchestration primitives for AI agent loops. Zero dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DraftSOS Research" },
]
keywords = [
    "ai-agents",
    "orchestration",
    "bayesian",
    "thompson-sampling",
    "circuit-breaker",
    "anomaly-detection",
    "multi-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/DraftSOS/loopkit"
Repository = "https://github.com/DraftSOS/loopkit"
Issues = "https://github.com/DraftSOS/loopkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/loopkit"]
