[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loopkit"
version = "0.2.0"
description = "Probabilistic orchestration primitives for AI agent loops. Zero dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "pookNast" },
]
keywords = [
    "ai-agents",
    "orchestration",
    "bayesian",
    "thompson-sampling",
    "circuit-breaker",
    "anomaly-detection",
    "multi-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/pookNast/loopkit"
Repository = "https://github.com/pookNast/loopkit"
Issues = "https://github.com/pookNast/loopkit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loopkit"]

[tool.hatch.build.targets.wheel.force-include]
"src/loopkit/py.typed" = "loopkit/py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
